# Halo

./: .gitignore  CONVENTIONS.md  docker-compose.yml
app/: .env.example  README.md  analysis_options.yaml  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/integration_test/: google_maps_polyline_stress_test.dart
app/ios/Flutter/: Profile.xcconfig  Secrets.xcconfig.example
app/ios/Runner/: AppDelegate.swift  Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/config/: halo_map_config.dart
app/lib/core/network/: api_client.dart
app/lib/core/router/: app_router.dart
app/lib/features/home/presentation/: home_screen.dart  search_placeholder_screen.dart
app/lib/features/route_map/data/: demo_map_data.dart  (+1 more)
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner/: Info.plist
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc
data/: .env.example  Dockerfile  main.py  pyproject.toml
data/scripts/: load_osm_segments.py  score_segments.py
data/src/halo_data/: __init__.py
data/src/halo_data/ingestion/: __init__.py
data/src/halo_data/processing/: __init__.py
data/src/halo_data/scoring/: __init__.py  wsi_calculator.py
data/tests/scoring/: test_wsi_calculator.py
server/: Dockerfile  build.gradle.kts  settings.gradle.kts
server/src/main/resources/: application-local.yml  application-local.yml.example  application.yml
(+57 files in other folders)
