[project]
name = "halo-data"
version = "0.1.0"
description = "Halo WSI data pipeline — ingestion, processing, scoring"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",       # PostgreSQL driver (psycopg3)
    "python-dotenv>=1.0",          # .env loading
    "pydantic>=2.7",               # data validation / settings
    "structlog>=24.0",             # structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/halo_data"]

# ---------------------------------------------------------------------------
# Ruff (lint + format — replaces black + isort + flake8)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
